# Allowable

./: Allowable.sln  CMakeLists.txt  CRTP.sln  vs17_64.cmd
Allowable/: Allowable.vcxproj  allow.cpp  allow.h  main.cpp  protected_class.cpp  protected_class.h
CRTP/: Allow.cpp  Allow.h  CRTP.cpp  CRTP.vcxproj  CRTP.vcxproj.filters  protected_class.cpp  protected_class.h
